app/styles/_main-player.scss
$water-blue: #1277c4;
$denim-blue: #00518E;
/**
 * Common Breakpoints
 */
 $xsmall: 360px;
 $small: 550px;
 $medium: 768px;
 $large: 850px;
 $xlarge: 1024px;
 $xxlarge: 1200px;
 $xxxlarge: 1500px;

$font-body: "Open Sans", sans-serif;

.stream-banner-card {
  background-color: transparent;
  border-top: none;
}
.stream-banner-card::before {
  background-color: transparent;
}

.stream-banner-station {
  border-bottom: none;
  justify-content: center;
  margin-bottom: 24px;

  @media only screen and (min-width: $medium) {
    justify-content: left;
    margin-bottom: 48px;
  }
}

.stream-banner .stream-banner-dropdown.ember-power-select-dropdown {
  top: 0px;
}

.stream-banner-station > .ember-basic-dropdown > .ember-power-select-trigger {
  padding-right: 0px;
}

.stream-banner__trigger {
  flex-direction: column;
  align-items: center;

  @media only screen and (min-width: $xsmall) {
    flex-direction: row;
  }

  .stream-banner__active-stream {
    background: rgba(0, 0, 0, 0.15);
    border-radius: 18px;
    color: #ffffff;
    font-family: $font-body;
    font-size: 12px;
    height: 36px;
    letter-spacing: 1.2px;
    line-height: 36px;
    margin-bottom: 16px;
    margin-right: 0px;
    min-width: 180px;
    padding-left: 24px;
    padding-right: 24px;
    text-align: center;
    text-transform: uppercase;
    white-space: nowrap;

    @media only screen and (min-width: $xsmall) {
      margin-bottom: 0px;
      margin-right: 10px;
    }

    .sound-animation {
      width: 32px;
    }
  }

  .more-streams-label {
    &:after {
      content: "+ More Streams";

      @media only screen and (min-width: $xsmall) {
        content: "+ Streams";
      }

      @media only screen and (min-width: $medium) {
        content: "+ More Streams";
      }
    }
    align-items: center;
    border: 1px solid rgba(255, 255, 255, 0.7);
    border-radius: 12px;
    color: #FFFFFF;
    display: flex;
    font-family: $font-body;
    font-weight: bold;
    font-size: 9.989px;
    height: 24px;
    justify-content: center;
    letter-spacing: 1.6px;
    text-transform: uppercase;
    width: 136px;
  }
}

.sitechrome-top {
  @media only screen and (min-width: 1025px) {
    margin-bottom: 0px;
  }
}

.sitechrome-page-content-area {
  @media only screen and (min-width: 769px) {
    margin-top: 0px;
  }
}
/* ... */

